--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
     "slugify": "^1.6.6"
